--- a/src/app/produto/cadastrar/cadastrar.component.html
+++ b/src/app/produto/cadastrar/cadastrar.component.html
@@ -23,6 +23,9 @@
     <button mat-button (click)="deletarProdutos()" style="background-color: red; color: white;">
       Deletar Todos
     </button>
+    <button mat-button (click)="voltar()" style="background-color: red; color: white;">
+      Voltar
+    </button>
   </div>
 
   <h3>Lista de Produtos Cadastrados</h3>
