--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 
 <mat-toolbar style="background-color: lightblue;">
-  <button mat-mini-fab (click)="navegar()">
-    <mat-icon fontIcon="arrow_right_alt" >menu</mat-icon>
-  </button>
-  <button style="margin-left: 5px;" mat-mini-fab  class="example-icon" (click)="voltar()" >
+  <button  mat-mini-fab  class="example-icon" (click)="voltar()" >
     <mat-icon  fontIcon="home">a</mat-icon>
   </button>
+  <button style="margin-left: 5px;" mat-mini-fab (click)="navegar()">
+    <mat-icon fontIcon="edit_square" >menu</mat-icon>
+  </button>
+  <button style="margin-left: 5px;" mat-mini-fab (click)="listar()">
+    <mat-icon fontIcon="assignment_ind" >menu</mat-icon>
+  </button>
+  
   <span style="margin-left: 10px;">Trabalho Projeto Integrador</span>
   
   
