--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <button  mat-mini-fab  class="example-icon" (click)="voltar()" >
     <mat-icon  fontIcon="home">a</mat-icon>
   </button>
-  <button style="margin-left: 5px;" mat-mini-fab (click)="navegar()">
+  <button style="margin-left: 5px;" mat-mini-fab (click)="cadastrar()">
     <mat-icon fontIcon="edit_square" >menu</mat-icon>
   </button>
   <button style="margin-left: 5px;" mat-mini-fab (click)="listar()">
